[gd_scene load_steps=6 format=3 uid="uid://dwtqyr446ky0u"]

[ext_resource type="ArrayMesh" uid="uid://biuhawoo8sm4x" path="res://Models/Keycards/Red_Keycard/Red_Keycard.obj" id="1_0u24i"]
[ext_resource type="Script" uid="uid://drrf08uvqg2pi" path="res://Scripts/Projectiles/ProjectileScene.gd" id="1_ruu1n"]

[sub_resource type="SphereShape3D" id="SphereShape3D_byle5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8mvtq"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_icqvo"]
radius = 8.0

[node name="ProjectileScene" type="CharacterBody3D" node_paths=PackedStringArray("NoiseTimer", "ProjectileMesh", "EnemyDetector")]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_ruu1n")
NoiseTimer = NodePath("NoiseTimer")
ProjectileMesh = NodePath("MeshInstance3D")
EnemyDetector = NodePath("EnemyDetector")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.0282298, 0)
visible = false
shape = SubResource("SphereShape3D_byle5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_0u24i")

[node name="EnemyDetector" type="Area3D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyDetector"]
shape = SubResource("SphereShape3D_8mvtq")

[node name="SoundEmitted" type="Area3D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="SoundEmitted"]
shape = SubResource("SphereShape3D_icqvo")

[node name="NoiseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="area_entered" from="SoundEmitted" to="." method="_on_sound_emitted_area_entered"]
[connection signal="body_entered" from="SoundEmitted" to="." method="_on_sound_emitted_body_entered"]
[connection signal="body_exited" from="SoundEmitted" to="." method="_on_sound_emitted_body_exited"]
[connection signal="timeout" from="NoiseTimer" to="." method="NoiseTimeout"]
